--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Home - FTB - Houston Police Department</title>
+  </head>
 
+  <body>
+    
+  </body>
+</html>
