--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html>
   <head>
     <title>Home - FTB - Houston Police Department</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
-    
+    <div class="topnav">
+      <a href="index.html">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Applications</a>
+      <a href="#">Blank Page</a>
+      <a href="#">Blank Page</a>
+    </div>
   </body>
 </html>
