--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Home - FTB - Houston Police Department</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="https://cdn.discordapp.com/icons/1213656439932067860/e5835b2310074ea245e133a47ba9d46a.png?size=96">
   </head>
 
   <body>
