--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/x-icon" href="https://cdn.discordapp.com/icons/1213656439932067860/e5835b2310074ea245e133a47ba9d46a.png?size=96">
   </head>
 
-  <body>
+  <body id="body">
     <div class="topnav">
       <a href="index.html">Home</a>
       <a href="#">About Us</a>
